--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1><a href="http://elcomite.org"><img src="./images/elComite.png"/></a>   {el comité}</h1>
+                <h1><a href="http://elcomite.org"><img src="./images/elComite.png"/></a>   {elComité}</h1>
                 <p class="lead">Comunidad profesional e independiente de Bilbao en torno al desarrollo de proyectos para Internet.</p>
             </div>
         </div>
@@ -52,12 +52,12 @@
 
                         <div class="row">
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
-                                <h3>Comité Noviembre - Grids CSS</h3>
+                                <h3>Comité Noviembre - Cuadrículas (Grids) CSS</h3>
                                 <p><strong>28 de Noviembre, 19:00</strong></p>
                                 <p>Ponente: <a href="http://www.linkedin.com/in/ionlopez">Ion López</a></p>
                                 <p>Lugar: Universidad de Deusto - Aula 202b</p>
                                 <p>Convocatoria: Abierta</p>
-                                <p>Enlace: <a href="./views/grids_css.html">Grids CSS</a></p>
+                                <p><a href="./views/grids_css.html">Detalle >> </a></p>
                                 <hr>
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
