add techdays and 1st comite:x

--- a/index.html
+++ b/index.html
@@ -52,21 +52,27 @@
 
                         <div class="row">
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
-                                <h3>Comité Noviembre - Grids CSS</h3>
-                                <p><strong>28 de Noviembre, 19:00</strong></p>
-                                <p>Ponente: <a href="http://www.linkedin.com/in/ionlopez">Ion López</a></p>
-                                <p>Lugar: Universidad de Deusto - Aula 202b</p>
-                                <p>Convocatoria: Abierta</p>
-                                <p>Enlace: <a href="./views/grids_css.html">Grids CSS</a></p>
-                                <hr>
+                                <h3>AlberoTechDay</h3>
+                                <p><strong>22 de Febrero</strong></p>
+                                <p><strong>Lugar:</strong> Clouding Pointing - Parque Empresarial Nuevo Torneo, Sevilla</p>
+                                <p><strong>Convocatoria:</strong> Bajo inscripción desde <a href="http://www.eventbrite.es/e/alberto-tech-day-sevilla-tickets-10475501507">aquí</a></p>
+                                <p><strong>Enlace:</strong> <a href="http://elcomite.org/albero/"> + información</a></p>
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
-                                <h3>BilboStack 2014</h3>
-                                <p><strong>25 de Enero, 9:00am</strong></p>
-                                <p>Lugar: Universidad de Deusto</p>
-                                <p>Convocatoria: Bajo inscripción</p>
-                                <p>Enlace: <a href="http://bilbostack.com">http://BilboStack.com</a></p>
-                                <hr>
+                                <h3>Charla secreta:</h3>
+                                <p><strong>Ponentes:</strong> <a href="https://twitter.com/enekopalencia">@enekopalencia</a> / <a href="https://twitter.com/andoniarroyo">@andoniarroyo</a></p>
+                                <p><strong>27 de Febrero / 19h-21h</strong></p>
+                                <p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>
+                                <p><strong>Convocatoria:</strong> Bajo inscripción (en breve)</p>
+                                <!--<p><strong>Enlace:</strong> <a href="http://elcomite.org/"> + información</a></p>-->
+                            </div>
+                            <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
+                                <h3>Máxima eficiencia en desarrollo de aplicaciones Android</h3>
+                                <p><strong>Ponentes:</strong> <a href="https://twitter.com/Ibai_Iturricha">@Ibai_Iturricha</a></p>
+                                <p><strong>11 de Marzo / 19h-21h</strong></p>
+                                <!--<p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>-->
+                                <p><strong>Convocatoria:</strong> Bajo inscripción (en breve)</p>
+                                <!--<p><strong>Enlace:</strong> <a href="http://elcomite.org/"> + información</a></p>-->
                             </div>
                         </div>
 
