anyadir landing comite febrero

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1><a href="http://elcomite.org"><img src="./images/elComite.png"/></a>   {elComité}</h1>
+                <h1><a href="http://elcomite.org" target="_blank"><img src="./images/elComite.png"/></a>   {elComité}</h1>
                 <p class="lead">Comunidad profesional e independiente de Bilbao en torno al desarrollo de proyectos para Internet.</p>
             </div>
         </div>
@@ -52,29 +52,22 @@
 
                         <div class="row">
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
-<<<<<<< HEAD
                                 <h3>AlberoTechDay</h3>
                                 <p><strong>22 de Febrero</strong></p>
                                 <p><strong>Lugar:</strong> Clouding Pointing - Parque Empresarial Nuevo Torneo, Sevilla</p>
-                                <p><strong>Convocatoria:</strong> Bajo inscripción desde <a href="http://www.eventbrite.es/e/alberto-tech-day-sevilla-tickets-10475501507">aquí</a></p>
-                                <p><strong>Enlace:</strong> <a href="http://elcomite.org/albero/"> + información</a></p>
-=======
-                                <h3>Comité Noviembre - Cuadrículas (Grids) CSS</h3>
-                                <p><strong>28 de Noviembre, 19:00</strong></p>
-                                <p>Ponente: <a href="http://www.linkedin.com/in/ionlopez">Ion López</a></p>
-                                <p>Lugar: Universidad de Deusto - Aula 202b</p>
-                                <p>Convocatoria: Abierta</p>
-                                <p><a href="./views/grids_css.html">Detalle >> </a></p>
+                                <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="http://www.eventbrite.es/e/alberto-tech-day-sevilla-tickets-10475501507" target="_blank">AQUÍ</a></strong></p>
+                                <p><strong>Enlace:</strong> <a href="http://elcomite.org/albero/" target="_blank"> + información</a></p>
                                 <hr>
->>>>>>> d096d8818e2463449a111fb5511428b8c797e8d7
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
-                                <h3>Charla secreta:</h3>
-                                <p><strong>Ponentes:</strong> <a href="https://twitter.com/enekopalencia">@enekopalencia</a> / <a href="https://twitter.com/andoniarroyo">@andoniarroyo</a></p>
+                                <h3>W.T.F. is “this”...In Javascript? by @andoniarroyo</h3>
+                                <h3>&lt;freaks&gt; La parada de los monstruos by @enekopalencia</h3>
+                                <p><strong>Ponentes:</strong> <a href="https://twitter.com/enekopalencia" target="_blank">@enekopalencia</a> / <a href="https://twitter.com/andoniarroyo" target="_blank">@andoniarroyo</a></p>
                                 <p><strong>27 de Febrero / 19h-21h</strong></p>
                                 <p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>
-                                <p><strong>Convocatoria:</strong> Bajo inscripción (en breve)</p>
-                                <!--<p><strong>Enlace:</strong> <a href="http://elcomite.org/"> + información</a></p>-->
+                                <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="https://elcomite.stagehq.com/events/2821" target="_blank">AQUÍ</a></strong></p>
+                                <p><strong>Enlace:</strong> <a href="http://elcomite.org/comite/thisJS&htmlFreaks" target="_blank"> + información</a></p>
+                                <hr>
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
                                 <h3>Máxima eficiencia en desarrollo de aplicaciones Android</h3>
@@ -82,7 +75,7 @@
                                 <p><strong>11 de Marzo / 19h-21h</strong></p>
                                 <!--<p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>-->
                                 <p><strong>Convocatoria:</strong> Bajo inscripción (en breve)</p>
-                                <!--<p><strong>Enlace:</strong> <a href="http://elcomite.org/"> + información</a></p>-->
+                                <!--<p><strong>Enlace:</strong> <a href="http://elcomite.org/" target="_blank"> + información</a></p>-->
                             </div>
                         </div>
 
@@ -145,7 +138,7 @@
 
                 <h3>Techdays</h3>
                 <p>Eventos puntuales organizados fuera del país vasco en otras ciudades de España o del resto del mundo.</p>
-                <p>Los formatos suelen ser de una mañana de sábado y los organizan <a href="http://simettric.com">Simettric</a> y <a href="http://plainconcepts.com">Plain Concepts</a> junto a las comunidades locales de la ciudad.</p>
+                <p>Los formatos suelen ser de una mañana de sábado y los organizan <a href="http://simettric.com" target="_blank">Simettric</a> y <a href="http://plainconcepts.com" target="_blank">Plain Concepts</a> junto a las comunidades locales de la ciudad.</p>
                 <hr>
 
                 <h3>Hackmité</h3>
@@ -158,7 +151,7 @@
                 <hr>
 
                 <h3>Artalde</h3>
-                <p>Eventos organizados por <a href="http://plainconcepts.com">Plain Concepts</a> y la comunidad en torno a .net de Bilbao y alrededores.</p>
+                <p>Eventos organizados por <a href="http://plainconcepts.com" target="_blank">Plain Concepts</a> y la comunidad en torno a .net de Bilbao y alrededores.</p>
                 <hr>
 
 
@@ -170,7 +163,7 @@
         <hr>
         <div class="row">
             <div class="col-md-12">
-                2013 - ElComité
+                2014 - elComité.org
             </div>
         </div>
 
