--- a/albero/index.html
+++ b/albero/index.html
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Artifika' rel='stylesheet' type='text/css'>
 
     <!-- Simettric loves u bro -->
-    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -165,17 +165,26 @@
 
                     <h3 class="artifika">Localización</h3>
 
-                    <p>Centro Clouding Point Sevilla</p>
-                    <p>C\ Biología, 12, Edificio Vilamar 2, 3ª Planta<br>
-                        Parque Empresarial Nuevo Torneo<br>
-                        41015 Sevilla
+                    <p>Edificio CREA</p>
+                    <p>C\ Jose Galán Merino<br>
+                       48015 Sevilla
                     </p>
-                    <p><a href="https://maps.google.es/maps?q=C%5C+Biolog%C3%ADa,+12,+Edificio+Vilamar+2,+sevilla&hl=es&ie=UTF8&ll=37.401392,-5.969181&spn=0.113458,0.234318&sll=37.333351,-4.576501&sspn=7.265676,14.996338&t=h&hq=C%5C+Biolog%C3%ADa,+12,+Edificio+Vilamar+2,+sevilla&radius=15000&z=13&iwloc=B" target="_blank">ver en Google Maps</a> </p>
+
+                    <p><a href="https://maps.google.com/maps?q=avda+jose+galan+merino+sevilla&hl=es&ie=UTF8&sll=37.0625,-95.677068&sspn=40.681389,95.976562&hnear=Calle+Jos%C3%A9+Gal%C3%A1n+Merino,+Sevilla,+Espa%C3%B1a&t=h&z=14&iwloc=A" target="_blank">ver en Google Maps</a> </p>
 
                 </div>
 
-                <div class="col-sm-8">
+                <hr class="hidden-lg hidden-md hidden-sm">
+
+                <div class="col-sm-8 sponsor-list">
                     <div class="row">
+                        <div class="col-sm-12 ">
+
+
+                            <h4>Organizan</h4>
+
+
+                        </div>
                         <div class="col-sm-4 sponsors ">
 
 
@@ -196,6 +205,21 @@
 
                         </div>
 
+
+                    </div>
+
+
+
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-12 ">
+
+
+                            <h4>Colaboran</h4>
+
+
+                        </div>
+
                         <div class="col-sm-3 sponsors">
 
 
@@ -205,6 +229,18 @@
 
 
                         </div>
+
+                        <div class="col-sm-3 sponsors">
+
+
+                            <a class="" target="_blank" href="http://microsoft.com" title="Microsoft">
+                                <img src="img/microsoft.png" alt="Microsoft">
+                            </a>
+
+
+                        </div>
+
+
                     </div>
                 </div>
         </div>
