--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
                                 <h3>AlberoTechDay</h3>
                                 <p><strong>22 de Febrero</strong></p>
-                                <p><strong>Lugar:</strong> Clouding Pointing - Parque Empresarial Nuevo Torneo, Sevilla</p>
+                                <p><strong>Lugar:</strong> Edificio CREA, C\ Jose Galán Merino, Sevilla</p>
                                 <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="http://www.eventbrite.es/e/alberto-tech-day-sevilla-tickets-10475501507" target="_blank">AQUÍ</a></strong></p>
-                                <p><strong>Enlace:</strong> <a href="http://elcomite.org/albero/" target="_blank"> + información</a></p>
+                                <p><strong>Enlace:</strong> <a href="./albero/" target="_blank"> + información</a></p>
                                 <hr>
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
-                                <h3>W.T.F. is “this”...In Javascript? by @andoniarroyo</h3>
-                                <h3>&lt;freaks&gt; La parada de los monstruos by @enekopalencia</h3>
+                                <h3>W.T.F. is “this”...In Javascript?</h3>
+                                <h3>&lt;freaks&gt; La parada de los monstruos </h3><br/>
                                 <p><strong>Ponentes:</strong> <a href="https://twitter.com/enekopalencia" target="_blank">@enekopalencia</a> / <a href="https://twitter.com/andoniarroyo" target="_blank">@andoniarroyo</a></p>
                                 <p><strong>27 de Febrero / 19h-21h</strong></p>
                                 <p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>
                                 <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="https://elcomite.stagehq.com/events/2821" target="_blank">AQUÍ</a></strong></p>
-                                <p><strong>Enlace:</strong> <a href="http://elcomite.org/comite/thisJS&htmlFreaks" target="_blank"> + información</a></p>
+                                <p><strong>Enlace:</strong> <a href="./comite/thisJS&htmlFreaks" target="_blank"> + información</a></p>
                                 <hr>
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
@@ -75,7 +75,7 @@
                                 <p><strong>11 de Marzo / 19h-21h</strong></p>
                                 <!--<p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>-->
                                 <p><strong>Convocatoria:</strong> Bajo inscripción (en breve)</p>
-                                <!--<p><strong>Enlace:</strong> <a href="http://elcomite.org/" target="_blank"> + información</a></p>-->
+                                <!--<p><strong>Enlace:</strong> <a href="./effective-android/" target="_blank"> + información</a></p>-->
                             </div>
                         </div>
 
