--- a/comite/effective-android/index.html
+++ b/comite/effective-android/index.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-3">
-                    <a target="_blank" href="https://twitter.com/IbaiIturricha" class="thumbnail"><img src="../../images/speakers/ibaiI.jpg"></a>
+                    <a target="_blank" href="https://twitter.com/IbaiIturricha" class="thumbnail"><img src="../../images/speakers/IbaiI.jpg"></a>
                 </div>
                 <div class="col-xs-9  col-md-8">
                     <h3>Ibai Iturricha</h3>
@@ -99,6 +99,7 @@
                         </tr>
                         </tbody>
                     </table>
+                    <hr/>
                 </div>
             </div>
         </div>
