--- a/comite/rap/index.html
+++ b/comite/rap/index.html
@@ -39,9 +39,9 @@
         </div>
        <div class="claim">
             <div class="container">
-                <div class="row">
-                    <div class="col-xs-12"></div>
-                </div>
+                <div class="col-xs-12">
+                        <h3 class="claim-text artifika">R.A.P. (Rely on Android Platform)</h3>
+                    </div>
             </div>
         </div>
     </section>
@@ -50,11 +50,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-3">
-                    <a target="_blank" href="https://twitter.com/IbaiIturricha" class="thumbnail"><img src="../../images/speakers/IbaiI.jpg"></a>
+                    <a target="_blank" href="https://twitter.com/Ibai_Iturricha" class="thumbnail"><img src="../../images/speakers/IbaiI.jpg"></a>
                 </div>
                 <div class="col-xs-9  col-md-8">
                     <h3>Ibai Iturricha</h3>
-                    <p></p>
+                    <p>Trabaja como CTO en <b><a href="http://www.aditium.com/" target="_blank">Aditium</a></b>, dónde crean soluciones basadas en el uso de smartphones y la tecnología NFC (Near Field Communication).</p>
+                    <p>Lleva programando en Android desde que salió el G1. Fuera del curro, le encanta practicar snow y jugar al basket.</p>
                 </div>
             </div>
         </div>
@@ -70,7 +71,7 @@
                         <tr>
                             <td><h4>19:00</h4></td>
                             <td>
-                                <h4>Aplicaciones Android vitaminadas</h4>
+                                <h4>R.A.P. (Rely on Android Platform)</h4>
                                 <p><b>¿Desarrollas Android pero no acabas de "rematar"?</b></p>
                                 <p><b>¿Tienes controlado el flujo de desarrollo de apps pero te falta salto cualitativo en una app y LA app?</b></p>
 
