--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <p><strong>22 de Febrero</strong></p>
                                 <p><strong>Lugar:</strong> Edificio CREA, C\ Jose Galán Merino, Sevilla</p>
                                 <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="http://www.eventbrite.es/e/alberto-tech-day-sevilla-tickets-10475501507" target="_blank">AQUÍ</a></strong></p>
-                                <p><strong>Enlace:</strong> <a href="./albero/" target="_blank"> + información</a></p>
+                                <p><strong>Enlace:</strong> <a href="./albero/"> + información</a></p>
                                 <hr>
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
@@ -66,16 +66,16 @@
                                 <p><strong>27 de Febrero / 19h-21h</strong></p>
                                 <p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>
                                 <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="https://elcomite.stagehq.com/events/2821" target="_blank">AQUÍ</a></strong></p>
-                                <p><strong>Enlace:</strong> <a href="./comite/thisJS&htmlFreaks" target="_blank"> + información</a></p>
+                                <p><strong>Enlace:</strong> <a href="./comite/thisJS&htmlFreaks"> + información</a></p>
                                 <hr>
                             </div>
                             <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
-                                <h3>Máxima eficiencia en desarrollo de aplicaciones Android</h3>
+                                <h3>R.A.P. (Rely on Android Platform)</h3>
                                 <p><strong>Ponentes:</strong> <a href="https://twitter.com/Ibai_Iturricha">@Ibai_Iturricha</a></p>
                                 <p><strong>11 de Marzo / 19h-21h</strong></p>
                                 <!--<p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>-->
                                 <p><strong>Convocatoria:</strong> Bajo inscripción (en breve)</p>
-                                <!--<p><strong>Enlace:</strong> <a href="./effective-android/" target="_blank"> + información</a></p>-->
+                                <!--<p><strong>Enlace:</strong> <a href="./comite/rap/"> + información</a></p>-->
                             </div>
                         </div>
 
