--- a/comite/rap/index.html
+++ b/comite/rap/index.html
@@ -115,7 +115,7 @@
                     <h3 class="artifika">Localización</h3>
 
                     <p> Universidad de Deusto<br>
-                        Edificio ESIDE, 2º planta, Aula 202b</p>                    
+                        Edificio ESIDE, 2º planta, Aula 214-A</p>                    
                     <p> Avenida de las Universidades 24<br>
                         48007 Bilbao
                     </p>
