--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <h3>R.A.P. (Rely on Android Platform)</h3>
                                 <p><strong>Ponentes:</strong> <a href="https://twitter.com/Ibai_Iturricha">@Ibai_Iturricha</a></p>
                                 <p><strong>11 de Marzo / 19h-21h</strong></p>
-                                <p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 214-A</p>
+                                <p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 214A</p>
                                 <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="https://elcomite.stagehq.com/events/2829" target="_blank">AQUÍ</a></strong></p>
                                 <p><strong>Enlace:</strong> <a href="./comite/rap"> + información</a></p>
                             </div>
