--- a/index.html
+++ b/index.html
@@ -49,11 +49,18 @@
                 <div class="col-md-4">
                     <h4>Eventos próximos</h4>
                     <article class="event panel">
-
                         <div class="row">
-                            <div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
+                            <!--<div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-xs-offset-1">
+                                <h3>Kwido</h3>
+                                <strong><p>Plataforma tecnológica para cuidadores y profesionales que trabajan con personas mayores y dependientes</p></strong><br/>
+                                <p><strong>Ponente:</strong> Gonzalo Pérez de Ideable <a href="https://twitter.com/hilgroth" target="_blank">@hilgroth</a>
+                                <p><strong>19 de Junio / 19:30h - 20:30h</strong></p>
+                                <p><strong>Lugar:</strong> Universidad de Deusto - ESIDE - Aula 202B</p>
+                                <p><strong>Convocatoria:</strong> Bajo inscripción desde <strong><a href="https://elcomite.stagehq.com/events/3006" target="_blank">AQUÍ</a></strong></p>
+                                <p><strong>Enlace:</strong> <a href="./comite/kwido"> + información</a></p>
+                                <hr>
                                 <h3></h3>
-                            </div>
+                            </div>-->
                         </div>
 
                     </article>
